[package]
name = "siomirai"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "siomirai"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.15.1", features = ["extension-module"] }
rq-engine = { git = "https://github.com/lz1998/rs-qq.git", branch = "master" }
serde_json = "1.0"
bytes = "1"

[profile.release]
opt-level = 'z'
debug = false
lto = true
incremental = false
codegen-units = 1
strip = true
panic='abort'
