[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]

[project]
name = "siomirai"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

